[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/runner.png" type="Texture" id=1]
[ext_resource path="res://Runner.gd" type="Script" id=2]
[ext_resource path="res://RunnerConfigs.gd" type="Script" id=3]
[ext_resource path="res://sounds/step_left.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/step_right.mp3" type="AudioStream" id=5]
[ext_resource path="res://sounds/car.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 12.5 )

[node name="Runner" type="Node2D"]
script = ExtResource( 3 )
speed = 10

[node name="Runner" type="KinematicBody2D" parent="."]
collision_layer = 2
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="Runner"]
position = Vector2( 11, 13 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Runner"]
position = Vector2( 11, 12.5 )
shape = SubResource( 1 )

[node name="RayCastRight" type="RayCast2D" parent="Runner"]
position = Vector2( 11, 12.5 )
enabled = true
cast_to = Vector2( 199, 0 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayCastLeft" type="RayCast2D" parent="Runner"]
position = Vector2( 11, 12.5 )
enabled = true
cast_to = Vector2( -199, 0 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="step_left" type="AudioStreamPlayer" parent="Runner"]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="step_right" type="AudioStreamPlayer" parent="Runner"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="car" type="AudioStreamPlayer" parent="Runner"]
stream = ExtResource( 6 )
volume_db = -5.0
